--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Oswald", sans-serif;
+  background-color: #fdf2f8;
+}
+.logo {
+  font-family: "cookie", cursive;
+}
+.heroImg {
+  background-position: 50%;
+  background-image: url("https://cutewallpaper.org/21/closet-background/Closet-Background-Best-Background-Images-HD-Wallpaper.png");
+  height: 600px;
 }
